# Scientific-Computing-Reproduction---Auto-Tuning

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
.claude-plugin/: plugin.json
.codex/: INSTALL.md
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.opencode/: INSTALL.md
skills/: registry.yaml
skills/algorithm_discovery_skill/: SKILL.md
skills/algorithm_discovery_skill/scripts/: discovery_reporter.py
skills/auto_tuning_skill/: SKILL.md
skills/auto_tuning_skill/scripts/: experiment_runner.py
skills/computational_math_domain_skill/: SKILL.md
skills/computational_math_reproduction_workflow_skill/: SKILL.md  manifest.yaml
skills/computational_math_reproduction_workflow_skill/references/: checkpoint_contract.md  skill_routing.md
skills/computational_math_reproduction_workflow_skill/scripts/: workflow_state.py
skills/continuous_optimization_skill/: SKILL.md
skills/environment_deployment_skill/: SKILL.md
skills/failure_diagnosis_skill/: SKILL.md
skills/failure_diagnosis_skill/scripts/: failure_classifier.py
skills/human_review_skill/: SKILL.md
skills/human_review_skill/scripts/: checkpoint_writer.py
skills/matlab_environment_setup_skill/: SKILL.md
skills/matlab_runtime_skill/: SKILL.md  manifest.yaml
skills/matlab_runtime_skill/references/: INDEX.md
skills/repo_reproduction_skill/: SKILL.md
skills/repo_reproduction_skill/scripts/: executor.py  repo_analyzer.py  run_planner.py
skills/report_generation_skill/: SKILL.md
skills/visualization_skill/: SKILL.md
(+3 files in other folders)
