[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "computational-math-skills"
version = "0.1.0"
description = "Skill-driven computational math reproduction, deployment, tuning, visualization, and reporting MVP for coding agents (Codex is the primary reference operator)."
requires-python = ">=3.10"
dependencies = ["numpy>=1.23", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["skills*"]
exclude = ["outputs*", "examples*", "tests*", "docs*"]
